--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">影视圈</string>
     <string name="me">我</string>
-    <string name="signup">注册</string>
-    <string name="signin">登录</string>
+    <string name="sign">注册</string>
+    <string name="login">登录</string>
 </resources>
